fix: Overflowing content expands the chat bubble horizontally

--- a/src/chat-bubble/styles.scss
+++ b/src/chat-bubble/styles.scss
@@ -22,6 +22,7 @@
   flex-direction: column;
   gap: cs.$space-scaled-s;
   padding: cs.$space-scaled-s;
+  min-width: 0;
 
   border-start-start-radius: cs.$border-radius-chat-bubble;
   border-start-end-radius: cs.$border-radius-chat-bubble;
@@ -52,7 +53,7 @@
 }
 
 .content {
-  /* Used in test utils */
+  overflow: auto;
 }
 
 .actions {
